Fix issue with span { white-space: nowrap } in Firefox

--- a/Koha/Plugin/Com/MarywoodUniversity/RoomReservations/css/main.css
+++ b/Koha/Plugin/Com/MarywoodUniversity/RoomReservations/css/main.css
@@ -558,12 +558,14 @@ border-radius: 0 0 9px 0;
   color: #FFFFFF;
   border: 1px solid transparent;
   border-radius: 7px;
-  line-height: 2.5em;
+  /* line-height: 2.5em; */
+  margin: 0.25px;
 }
 
 .lmsr-pill-checkbox,
 .lmsr-pill-radio {
   white-space: nowrap;
+  float: left;
 }
 
 .lmsr-toast {
